--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,28 @@
 }
 
 .card {
+  width: 100%;
+  background-color: rgb(11, 38, 122);
   padding: 2em;
+  border-radius: 10%;
+  box-shadow: 20px 20px 0px rgb(160, 160, 160);
+
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.imageCard {
+  background-color: white;
+  width: 100%;
+  height: auto;
+  
+}
+
+figure {
+  color: white;
+  font-size: 2em;
+  font-weight: 800;
+
 }
