--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 }
 
 .card {
-  width: 100%;
+  width: 60%;
   background-color: rgb(11, 38, 122);
   padding: 2em;
   border-radius: 10%;
@@ -64,4 +64,5 @@ figure {
   margin-bottom: 20px;
   font-size: 1.5rem;
   font-weight: 800;
+  margin-right: 10px;
 }
